2003-12-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* docs/HOWTO-FILE-DRIVER: New file.
	* docs/TAPE.CHANGERS: Explain chg-disk.
	* docs/Makefile.am (pkgdata_DATA): add HOWTO-FILE-DRIVER.

2003-12-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* docs/SYSTEM.NOTES: Add a note about sendsize coredump on AIX.

2003-11-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Jean-Christian SIMONETTI <simonetti@echo.fr>

	* changer-src/chg-disk.sh.in: New changer script.
	* changer-src/Makefile.am (libexec_SCRIPTS): Add chg-disk.
	* configure.in (AC_CONFIG_FILES): Add changer-src/chg-disk.sh.

2003-11-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapetype.c: extern int optind.
	* tape-src/tapeio.c: extern int optind.

2003-11-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by C.Scheeder <christoph.scheeder@scheeder.de>

	* changer-src/sense.c (SenseType): Add "DAT AutoChanger" and "C1537A".

2003-11-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c: Print the tape size.
	* server-src/amstatus.pl.in: print % of tape use.

2003-11-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.c (copy_dumptype): Copy in/exclude only if seen.

2003-11-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/reporter.c (output_tapeinfo): Fix printing of new tape.

2003-11-25  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amcheck.c (taperscan_slot): Deal with label not in
	  tapelist case.
	* server-src/amtape.c (taperscan_slot): Ditto.
	* server-src/taper.c (taperscan_slot): Ditto.

2003-11-24  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c (handle_taper_result): Always call
	  continue_dumps() in TRYAGAIN case.

2003-11-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* changer-src/chg-chio.pl.in (getTapeStatus): Set $drives[$num] to 0
	if no tape in drive.
